2010-11-06  Robert Larice
 * src/frontend/measure.c ,
 * src/frontend/outitf.c ,
 * src/frontend/quote.c ,
 * src/frontend/help/readhelp.c ,
 * src/misc/util.c ,
 * src/misc/wlist.c ,
 * src/spicelib/devices/nbjt/nbjtset.c ,
 * src/spicelib/devices/nbjt2/nbt2set.c ,
 * src/spicelib/devices/numd/numdset.c ,
 * src/spicelib/devices/numd2/nud2set.c ,
 * src/spicelib/devices/numos/nummset.c ,
 * src/xspice/cmpp/ifs_yacc.y ,
 * src/xspice/enh/enhtrans.c ,
 * src/xspice/evt/evtload.c ,
 * src/xspice/icm/digital/d_source/cfunc.mod ,
 * src/xspice/icm/digital/d_state/cfunc.mod :
    change the type of a bunch of variables from `int' to `size_t'

2010-11-06  Robert Larice
 * src/frontend/plotting/plotit.c :
    tiny rewrite, avoid type conversion warnings

2010-11-06  Dietmar Warning
 * analysis/dctran.c: use ceil function for correct round up

2010-11-06  Robert Larice
 * src/spicelib/devices/ndev/ndevdump.c :
    drop some unused static variables

2010-11-06  Robert Larice
 * src/frontend/inpcom.c :
    tiny rewrite, make use of copy_substring()

2010-11-06  Robert Larice
 * src/frontend/diff.c :
    tiny rewrite, make use of cieq()

2010-11-06  Robert Larice
 * src/frontend/parse.c ,
 * src/frontend/typesdef.c ,
 * src/frontend/vectors.c ,
 * src/frontend/numparam/spicenum.c ,
 * src/spicelib/parser/inpptree.c ,
 * src/xspice/evt/evtplot.c ,
 * src/xspice/ipc/ipc.c :
    tiny rewrite, make use of strtolower() and strtoupper()

2010-11-06  Robert Larice
 * src/frontend/parser/input.c :
    tiny rewrite, type fixes

2010-11-06  Robert Larice
 * src/frontend/inpcom.c :
    drop a redundant check

2010-11-06  Robert Larice
 * src/spicelib/parser/inp2dot.c ,
 * src/spicelib/parser/inppas3.c :
    tiny rewrite, don't invoke strlen() to check for strlen() == 1

2010-11-06  Robert Larice
 * src/xspice/idn/idndig.c :
    change a (int) cast application, to avoid type conversion warnings

2010-11-06  Robert Larice
 * src/frontend/help/readhelp.c :